# Takenlijst-MVC

./: LICENSE  pyproject.toml
app/: main.py
app/api/routes/: todo.py
app/core/: config.py  database.py
app/models/: todo.py
app/services/: todo.py
templates/: index.html
templates/partials/: task_form.html  task_list.html
